feat(wsc-ce): port user-capabilities from advanced
Cherry-picked capabilities feature: CarbonioAttribute enum, Size/SizeUnit types,
capability checks in controllers, UserPrincipal.carbonioAttributes, UserProfile.type.
Feature flag check uses getFeaturesList() (not capabilitiesMap).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>